# CrawlingRobot

./: .gitignore  README.md  pyproject.toml  test.ipynb  train.sh
cfg/: config.yaml
cfg/learning/: learning_params.yaml
checkpoints/ourhope4/: env_cfg.pkl  env_model.xml  model_276.ckpt
data/: crawling_robot.xml
src/: agent.py  env.py  run.py
src/utils/: buffer.py  q_net.py  utils.py
