[tool.poetry]
name = "crawlingrobot"
version = "0.1.0"
description = ""
authors = ["biancaziliotto <b.ziliotto@studenti.unipi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
mediapy = "^1.2.2"
torch = "2.2.2"
wandb = "^0.19.8"
gym = "^0.26.2"
gymnasium = "0.29.1"
mujoco = "3.1.2"
numpy = "^2.2.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
